@@ -54,6 +54,7 @@ Bug Fixes::
 * prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
 * remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
 * major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)
+* don't allow AsciiDoc table cell to overrun bottom of page on which it fits (#2538)
 
 == 2.3.18 (2024-07-27) - @mojavelinux
 
